--- a/pom.xml
+++ b/pom.xml
@@ -1,19 +1,57 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>de.taimos</groupId>
-  <artifactId>spring-dao-hibernate</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
-  <name>Hibernate DAO for Spring</name>
-  
-  <organization>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>org.sonatype.oss</groupId>
+		<artifactId>oss-parent</artifactId>
+		<version>7</version>
+	</parent>
+
+	<groupId>de.taimos</groupId>
+	<artifactId>spring-dao-hibernate</artifactId>
+	<version>1.0.0-SNAPSHOT</version>
+	<name>Hibernate DAO for Spring</name>
+ 
+	<url>https://github.com/taimos/spring-dao-hibernate</url>
+	<inceptionYear>2013</inceptionYear>
+	<organization>
 		<name>Taimos GmbH</name>
 		<url>http://www.taimos.de</url>
 	</organization>
+	<scm>
+		<connection>scm:git:git@github.com:taimos/spring-dao-hibernate.git</connection>
+		<developerConnection>scm:git:git@github.com:taimos/spring-dao-hibernate.git</developerConnection>
+		<url>scm:git:git@github.com:taimos/spring-dao-hibernate.git</url>
+	</scm>
+	<issueManagement>
+		<system>github</system>
+		<url>https://github.com/taimos/spring-dao-hibernate/issues</url>
+	</issueManagement>
+	<licenses>
+		<license>
+			<name>The Apache Software License, Version 2.0</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
+	<developers>
+		<developer>
+			<id>hoegertn</id>
+			<email>thorsten.hoeger@taimos.de</email>
+			<name>Thorsten Hoeger</name>
+			<organization>Taimos GmbH</organization>
+			<organizationUrl>http://www.taimos.de</organizationUrl>
+			<timezone>+1</timezone>
+		</developer>
+	</developers>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<org.springframework.version>3.1.3.RELEASE</org.springframework.version>
-		<hibernate.version>4.1.4.Final</hibernate.version>
+		<org.springframework.version>3.2.0.RELEASE</org.springframework.version>
+		<hibernate.version>4.1.9.Final</hibernate.version>
 	</properties>
+	<prerequisites>
+		<maven>3.0.0</maven>
+	</prerequisites>
 	<build>
 		<plugins>
 			<plugin>
@@ -34,14 +72,14 @@
 			<artifactId>hibernate-entitymanager</artifactId>
 			<version>${hibernate.version}</version>
 		</dependency>
-		
+
 		<!-- Transaction Management Abstraction (depends on spring-core, spring-beans, spring-aop, spring-context) Define this if you use Spring Transactions 
 			or DAO Exception Hierarchy (org.springframework.transaction.*/org.springframework.dao.*) -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-tx</artifactId>
 			<version>${org.springframework.version}</version>
-		</dependency>		
-		
+		</dependency>
+
 	</dependencies>
 </project>
