--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 
 	<groupId>de.taimos</groupId>
 	<artifactId>spring-dao-hibernate</artifactId>
-	<version>1.1.0-SNAPSHOT</version>
+	<version>1.1.0</version>
 	<name>Hibernate DAO for Spring</name>
  
 	<url>https://github.com/taimos/spring-dao-hibernate</url>
