--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-release-plugin</artifactId>
+				<version>2.4.1</version>
 				<configuration>
 					<goals>deploy nexus-staging:release</goals>
 					<tagNameFormat>v@{project.version}</tagNameFormat>
