--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 
 	<groupId>de.taimos</groupId>
 	<artifactId>spring-dao-hibernate</artifactId>
-	<version>1.2.3-SNAPSHOT</version>
+	<version>1.3-SNAPSHOT</version>
 	<name>Hibernate DAO for Spring</name>
 
 	<url>https://github.com/taimos/spring-dao-hibernate</url>
@@ -46,8 +46,8 @@
 	</developers>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<org.springframework.version>3.2.3.RELEASE</org.springframework.version>
-		<hibernate.version>4.1.9.Final</hibernate.version>
+		<org.springframework.version>3.2.4.RELEASE</org.springframework.version>
+		<hibernate.version>4.2.7.SP1</hibernate.version>
 	</properties>
 	<prerequisites>
 		<maven>3.0.0</maven>
