--- a/pom.xml
+++ b/pom.xml
@@ -1,90 +1,30 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>org.sonatype.oss</groupId>
+		<groupId>de.taimos</groupId>
 		<artifactId>oss-parent</artifactId>
-		<version>7</version>
+		<version>1</version>
 	</parent>
-
-	<groupId>de.taimos</groupId>
 	<artifactId>spring-dao-hibernate</artifactId>
 	<version>1.6-SNAPSHOT</version>
 	<name>Hibernate DAO for Spring</name>
-
 	<url>https://github.com/taimos/spring-dao-hibernate</url>
 	<inceptionYear>2013</inceptionYear>
-	<organization>
-		<name>Taimos GmbH</name>
-		<url>http://www.taimos.de</url>
-	</organization>
 	<scm>
 		<connection>scm:git:git@github.com:taimos/spring-dao-hibernate.git</connection>
 		<developerConnection>scm:git:git@github.com:taimos/spring-dao-hibernate.git</developerConnection>
 		<url>scm:git:git@github.com:taimos/spring-dao-hibernate.git</url>
-	  <tag>HEAD</tag>
-  </scm>
+		<tag>HEAD</tag>
+	</scm>
 	<issueManagement>
 		<system>github</system>
 		<url>https://github.com/taimos/spring-dao-hibernate/issues</url>
 	</issueManagement>
-	<licenses>
-		<license>
-			<name>The Apache Software License, Version 2.0</name>
-			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
-			<distribution>repo</distribution>
-		</license>
-	</licenses>
-	<developers>
-		<developer>
-			<id>hoegertn</id>
-			<email>thorsten.hoeger@taimos.de</email>
-			<name>Thorsten Hoeger</name>
-			<organization>Taimos GmbH</organization>
-			<organizationUrl>http://www.taimos.de</organizationUrl>
-			<timezone>+1</timezone>
-		</developer>
-	</developers>
 	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<org.springframework.version>3.2.7.RELEASE</org.springframework.version>
 		<hibernate.version>4.3.3.Final</hibernate.version>
 	</properties>
-	<prerequisites>
-		<maven>3.0.0</maven>
-	</prerequisites>
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.0</version>
-				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-release-plugin</artifactId>
-				<version>2.4.2</version>
-				<configuration>
-					<goals>deploy nexus-staging:release</goals>
-					<tagNameFormat>v@{project.version}</tagNameFormat>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.sonatype.plugins</groupId>
-				<artifactId>nexus-staging-maven-plugin</artifactId>
-				<version>1.5.1</version>
-				<extensions>true</extensions>
-				<configuration>
-					<serverId>sonatype-nexus-staging</serverId>
-					<nexusUrl>https://oss.sonatype.org/</nexusUrl>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
-
 	<dependencies>
 		<dependency>
 			<groupId>org.hibernate</groupId>
